test/parser/block.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 9 ]]:1: error: expected '}' at the end of a block
// CHECK: [[# @LINE + 9 ]]:1: error: expected '}' at the end of a block

fn foo(): void {}
// CHECK: FunctionDecl: foo
// CHECK-NEXT:   BuiltinType: void
// CHECK-NEXT:   Block

fn bar(): void {
fn main(): void {
